# python-sql-tasks

./: .gitignore
1/: TASK.md  init.sql
1/src/: solution.py
1/tests/: conftest.py  test_solution.py
2/: TASK.md
2/src/: solution.py
2/tests/: conftest.py  test_solution.py
3/: TASK.md  init.sql
3/src/: solution.py
3/tests/: conftest.py  test_solution.py
4/: TASK.md  init.sql
4/src/: solution.py
4/tests/: test_solution.py
5/: TASK.md  init.sql
5/src/: solution.py
5/tests/: conftest.py  test_solution.py
6/: TASK.md  init.sql  pyproject.toml
6/src/: models.py  solution.py
6/tests/: conftest.py  test_solution.py
